syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.b1nd.dodamdodam.grpc.user";

service UserCredentialService {

  rpc VerifyPassword (VerifyPasswordRequest)
      returns (VerifyPasswordResponse);
}

service UserInfoService {

  rpc GetUserInfoByUsername (GetUserInfoByUsernameRequest)
      returns (UserInfoResponse);

  rpc GetUserInfosByUsernames (GetUserInfosByUsernamesRequest)
      returns (GetUserInfosByUsernamesResponse);
}

message VerifyPasswordRequest {
  string username = 1;
  string raw_password = 2;
}

message VerifyPasswordResponse {
  bool valid = 1;
}

message GetUserInfoByUsernameRequest {
  string username = 1;
}

message GetUserInfosByUsernamesRequest {
  repeated string usernames = 1;
}

message UserInfoResponse {
  string user_id = 1;
  string name = 2;
  string profile_image = 3;
}

message GetUserInfosByUsernamesResponse {
  repeated UserInfoResponse users = 1;
}
